debugging webkit bug where color input isn't rendered on IOS

--- a/index.css
+++ b/index.css
@@ -19,11 +19,6 @@ body {
    background: linear-gradient(to right, #cfb6e6, rgb(171, 181, 240));
 }
 
-/* .titleRow {
-  display: flex; 
-  justify-content: center;
-} */
-
 .card {
   width: 700px;
   border: 4px solid transparent; /* Set the border style to solid */
@@ -84,6 +79,26 @@ input[type="color"] {
   cursor: pointer;
   opacity: 0;
   visibility: hidden;
+}
+
+
+input[type="color"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  width: 70px;
+  height: 40px;
+  border: none;
+  cursor: pointer;
+}
+input[type="color"]::-webkit-color-swatch {
+  border-radius: 8px;
+  border: 4px solid #000000;
+}
+input[type="color"]::-moz-color-swatch {
+  border-radius: 8px;
+  border: 4px solid #000000;
 }
 /* END INPUTS */
 
